Tooling updated, localization updated for mlm

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -59,7 +59,7 @@ They can be on-premise, or on public cloud, private cloud, hybrid cloud or even 
 
 
 
-// SUMA index content
+// MLM index content
 
 ifeval::[{mlm-content} == true]
 == Available Documentation
@@ -87,7 +87,7 @@ Download all PDFs icon:caret-right[] icon:file-archive[link="../suse-multi-linux
 [IMPORTANT]
 ====
 {productname} documentation is available in several locations and formats.
-For the most up-to-date version of this documentation, see https://documentation.suse.com/suma/.
+For the most up-to-date version of this documentation, see https://documentation.suse.com/multi-linux-manager/.
 ====
 
 endif::[]
