--- a/modules/administration/pages/auth-methods-sso-example.adoc
+++ b/modules/administration/pages/auth-methods-sso-example.adoc
@@ -30,7 +30,7 @@ podman run -td --name keycloak -p 8080:8080 -e KEYCLOAK_USER=admin -e KEYCLOAK_P
 . Sign in the Keycloak {webui} as the ``admin`` user, and create an authentication realm using these details:
 +
 * In the ``Name`` field, enter a name for the realm.
-    For example, ``SUMA``.
+    For example, ``MLM``.
 * In the ``Endpoints`` field, click the ``SAML 2.0 Identity Provider Metadata`` link.
     This will lead you to a page where you will see the endpoints and certificate to copy into the {productname} configuration file.
 
@@ -39,15 +39,15 @@ When you have installed Keycloak and created the realm, you can prepare the {pro
 
 .Procedure: Setting Up the {productname} Server
 . On the {productname} Server, open the [path]``/etc/rhn/rhn.conf`` configuration file and edit these parameters.
-    Replace ``<FQDN_SUMA>`` with the fully qualified domain name of your {productname} installation:
+    Replace ``<FQDN_MLM>`` with the fully qualified domain name of your {productname} installation:
 +
 ----
-java.sso.onelogin.saml2.sp.entityid                       = https://<FQDN_SUMA>/rhn/manager/sso/metadata
-java.sso.onelogin.saml2.sp.assertion_consumer_service.url = https://<FQDN_SUMA>/rhn/manager/sso/acs
-java.sso.onelogin.saml2.sp.single_logout_service.url      = https://<FQDN_SUMA>/rhn/manager/sso/sls
+java.sso.onelogin.saml2.sp.entityid                       = https://<FQDN_MLM>/rhn/manager/sso/metadata
+java.sso.onelogin.saml2.sp.assertion_consumer_service.url = https://<FQDN_MLM>/rhn/manager/sso/acs
+java.sso.onelogin.saml2.sp.single_logout_service.url      = https://<FQDN_MLM>/rhn/manager/sso/sls
 ----
 . In the configuration file, replace ``<FQDN_IDP>`` with the fully qualified domain name of your Keycloak server.
-    Replace ``<REALM>`` with your authentication realm, for example ``SUMA``:
+    Replace ``<REALM>`` with your authentication realm, for example ``MLM``:
 +
 ----
 java.sso.onelogin.saml2.idp.entityid                   = http://<FQDN_IDP>:8080/realms/<REALM>
@@ -90,27 +90,27 @@ java.sso = true
 # Otherwise your environment is not secure and will be exposed to attacks.
 # Enable debug mode (to print errors)
 # Identifier of the SP entity (must be a URI)
-java.sso.onelogin.saml2.sp.entityid = https://sumaserver.example.org/rhn/manager/sso/metadata
+java.sso.onelogin.saml2.sp.entityid = https://MLMserver.example.org/rhn/manager/sso/metadata
 
 # Specifies info about where and how the <AuthnResponse> message MUST be
 # returned to the requester, in this case our SP.
 # URL Location where the <Response> from the IdP will be returned
-java.sso.onelogin.saml2.sp.assertion_consumer_service.url = https://sumaserver.example.org/rhn/manager/sso/acs
+java.sso.onelogin.saml2.sp.assertion_consumer_service.url = https://MLMserver.example.org/rhn/manager/sso/acs
 
 # Specifies info about where and how the <Logout Response> message MUST be
 # returned to the requester, in this case our SP.
-java.sso.onelogin.saml2.sp.single_logout_service.url = https://sumaserver.example.org/rhn/manager/sso/sls
+java.sso.onelogin.saml2.sp.single_logout_service.url = https://MLMserver.example.org/rhn/manager/sso/sls
 
 # Identifier of the IdP entity (must be a URI)
-java.sso.onelogin.saml2.idp.entityid = http://idp.example.org:8080/realms/SUMA
+java.sso.onelogin.saml2.idp.entityid = http://idp.example.org:8080/realms/MLM
 
 # SSO endpoint info of the IdP. (Authentication Request protocol)
 # URL Target of the IdP where the SP will send the Authentication Request Message
-java.sso.onelogin.saml2.idp.single_sign_on_service.url = http://idp.example.org:8080/realms/SUMA/protocol/saml
+java.sso.onelogin.saml2.idp.single_sign_on_service.url = http://idp.example.org:8080/realms/MLM/protocol/saml
 
 # SLO endpoint info of the IdP.
 # URL Location of the IdP where the SP will send the SLO Request
-java.sso.onelogin.saml2.idp.single_logout_service.url = http://idp.example.org:8080/realms/SUMA/protocol/saml
+java.sso.onelogin.saml2.idp.single_logout_service.url = http://idp.example.org:8080/realms/MLM/protocol/saml
 
 # Public x509 certificate of the IdP
 java.sso.onelogin.saml2.idp.x509cert = -----BEGIN CERTIFICATE----- MIIClzCCAX8CBgGC+tPbVjANBgkqhkiG9w0BAQsFADAPMQ0wCwYDVQQDDARTVU1BMB4XDTIyMDkwMTIwNTEwNFoXDTMyMDkwMTIwNTI0NFowDzENMAsG
@@ -123,14 +123,14 @@ ONoXZgjMb3eC7U691YyeowoqTY7mJKxNPprYY/lL0w== -----END CERTIFICATE-----
 # Organization
 java.sso.onelogin.saml2.organization.name = SUSE Manager admin
 java.sso.onelogin.saml2.organization.displayname = SUSE Manager admin
-java.sso.onelogin.saml2.organization.url = https://sumaserver.example.org
+java.sso.onelogin.saml2.organization.url = https://MLMserver.example.org
 java.sso.onelogin.saml2.organization.lang =
 
 # Contacts
 java.sso.onelogin.saml2.contacts.technical.given_name = SUSE Manager admin
-java.sso.onelogin.saml2.contacts.technical.email_address = suma@example.org
+java.sso.onelogin.saml2.contacts.technical.email_address = MLM@example.org
 java.sso.onelogin.saml2.contacts.support.given_name = SUSE Manager admin
-java.sso.onelogin.saml2.contacts.support.email_address = suma@example.org
+java.sso.onelogin.saml2.contacts.support.email_address = MLM@example.org
 ----
 
 
@@ -143,7 +143,7 @@ Keycloak refers to endpoints as clients.
 +
 * In the ``Client type`` field, select ``SAML``.
 * In the ``Client ID`` field, enter the endpoint specified in the server configuration file as ``java.sso.onelogin.saml2.idp.entityid``.
-    For example, ``https://<FQDN_SUMA>/rhn/manager/sso/metadata``.
+    For example, ``https://<FQDN_MLM>/rhn/manager/sso/metadata``.
 . In the ``Settings`` tab, fine-tune the client using these details:
 +
 * Toggle the ``Sign assertions`` switch to ``On``.
@@ -155,9 +155,9 @@ Keycloak refers to endpoints as clients.
 . In the ``Advanced`` tab, in the ``Fine Grain SAML Endpoint Configuration`` section, add the two endpoints using these details:
 +
 * In both the ``Assertion Consumer Service`` fields, enter the endpoint specified in the server configuration file as ``java.sso.onelogin.saml2.sp.assertion_consumer_service.url``.
-    For example, ``https://<FQDN_SUMA>/rhn/manager/sso/acs``.
+    For example, ``https://<FQDN_MLM>/rhn/manager/sso/acs``.
 * In both the ``Logout Service`` fields, enter the endpoint specified in the server configuration file as ``java.sso.onelogin.saml2.sp.single_logout_service.url``.
-    For example, ``https://<FQDN_SUMA>/rhn/manager/sso/sls``.
+    For example, ``https://<FQDN_MLM>/rhn/manager/sso/sls``.
 
 
 When you have added the endpoints as clients, you can configure the client scope, and map the users between Keycloak and {productname}.
