--- a/modules/administration/pages/troubleshooting/tshoot-firewalls.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-firewalls.adoc
@@ -19,11 +19,11 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 . Last step
 
 
-Cause: User firewall is set to block outgoing traffic by dropping the packet request. During sync with {scc}, SUMA waits for an answer on each URL until it times out, eventually causing the entire refresh of the product list to timeout. Applies only to third party (non-SUSE) products, as sync with {scc} needs to access locations other than {scc} to verify if the if the download location is valid.
+Cause: User firewall is set to block outgoing traffic by dropping the packet request. During sync with {scc}, mlm waits for an answer on each URL until it times out, eventually causing the entire refresh of the product list to timeout. Applies only to third party (non-SUSE) products, as sync with {scc} needs to access locations other than {scc} to verify if the if the download location is valid.
 
 Consequence: The sync to {scc} fails, and the third party products are not shown in the product list.
 
-Fix: Configure the firewall to reject requests from SUMA instead of drop (preferred), or configure a firewall on the server (if no ability to change firewall settings)
+Fix: Configure the firewall to reject requests from mlm instead of drop (preferred), or configure a firewall on the server (if no ability to change firewall settings)
 
 Result: Sync to {scc} is either able to reach the URLs required, or rejects the request so that the request fails rather than times out.
 ////
