--- a/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
@@ -59,7 +59,7 @@ Switching to an [literal]``rsync``-based approach to copy files between {product
 A script to accomplish this task is available for download at https://suse.my.salesforce.com/sfc/p/1i000000gLOd/a/1i000000ll5B/B2AmvIJN2_JsAyjTQzCVP_x5ioVgd0bYN9X9NpMugS8.
 
 The script does not accept command line options.
-Before running the script, you need to manually edit it and set correctly [literal]``SUMAHOSTNAME``, [literal]``SUMAIP`` and [literal]``SUMAPROXY1`` variables for it to work correctly.
+Before running the script, you need to manually edit it and set correctly [literal]``MLMHOSTNAME``, [literal]``MLMIP`` and [literal]``MLMPROXY1`` variables for it to work correctly.
 
 [WARNING]
 ====
@@ -77,8 +77,8 @@ The proposed approach using the script is beneficial in the following environmen
 +
 ----
 #proxies:
-# - "sumaproxy.sumaproxy.test"
-# - "sumaproxy2.sumaproxy.test"
+# - "MLMproxy.MLMproxy.test"
+# - "MLMproxy2.MLMproxy.test"
 ----
 
 
