--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -121,7 +121,7 @@ These languages are available in {productname}:
 
 ifeval::[{mlm-content} == true]
 
-[[langcodes-suma]]
+[[langcodes-mlm]]
 .Available Language Codes
 [cols="1,1,1", options="header"]
 |===
