--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -58,7 +58,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
-[[amazon-channels-suma-cli]]
+[[amazon-channels-MLM-cli]]
 [cols="1,1", options="header"]
 .{amazon} Channels - CLI
 |===
@@ -121,7 +121,7 @@ endif::[]
 
 ifeval::[{mlm-content} == true]
 
-include::snippets/check_sync_webui_suma.adoc[]
+include::snippets/check_sync_webui_mlm.adoc[]
 
 endif::[]
 
