--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -53,7 +53,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
-[[oracle-channels-suma-cli]]
+[[oracle-channels-MLM-cli]]
 [cols="1,1", options="header"]
 .Oracle Channels - CLI
 |===
@@ -125,7 +125,7 @@ If you do not provide Python 3.6, the installation of the [package]``spacecmd``
 
 ifeval::[{mlm-content} == true]
 
-include::snippets/check_sync_webui_suma.adoc[]
+include::snippets/check_sync_webui_mlm.adoc[]
 
 endif::[]
 
