--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -2,7 +2,7 @@
 = Registering Clients on a Public Cloud
 
 
-// 2024-04-04 OM: It had been decided in the conversation with the SUMA PO 
+// 2024-04-04 OM: It had been decided in the conversation with the MLM PO 
 // that this Public Cloud related file can stay in the Uyuni books
 
 When you have your {productname} Server set up, you are ready to start registering clients.
