--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -3,7 +3,7 @@
 
 // SUSE Liberty Linux not available at Uyuni for now
 
-// 2024-04-04 OM: It had been decided in the conversation with the SUMA PO 
+// 2024-04-04 OM: It had been decided in the conversation with the mlm PO 
 // that this Public Cloud related file can stay in the Uyuni books
 
 
@@ -295,7 +295,7 @@ include::snippets/manual_associate.adoc[]
 
 ifeval::[{mlm-content} == true]
 
-include::snippets/check_sync_webui_suma.adoc[]
+include::snippets/check_sync_webui_mlm.adoc[]
 
 endif::[]
 
