--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -139,7 +139,7 @@ endif::[]
 
 ifeval::[{mlm-content} == true]
 
-include::snippets/check_sync_webui_suma.adoc[]
+include::snippets/check_sync_webui_mlm.adoc[]
 
 endif::[]
 
@@ -209,7 +209,7 @@ Using any method different from [command]``systemd`` may cause undesired behavio
 // 2023-05-23, ke: The rest is commented and the user will not see the
 //                 following remarks/background info:
 ////
-Otherwise, the only thing Suma will be able to do is to ask for a reboot and it will be managed in the peculiarities of each reboot method. Not having control of when the reboot should happen, also takes away from Suma the ability to perform the reboot on its own maintenance windows, which is not the ideal configuration.
+Otherwise, the only thing mlm will be able to do is to ask for a reboot and it will be managed in the peculiarities of each reboot method. Not having control of when the reboot should happen, also takes away from mlm the ability to perform the reboot on its own maintenance windows, which is not the ideal configuration.
 
 The user must be able to change reboot method at any time and SUSE Manager will keep it. But in this case we should alert in the documentation that using any method different from systemd may cause undesired behavior.
 ////
