--- a/modules/client-configuration/pages/contact-methods-saltssh-tunnel.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh-tunnel.adoc
@@ -113,8 +113,8 @@ You can use the API to manage which contact method to use.
 This example Python code sets the contact method to ``ssh-push-tunnel``.
 
 ----
-client = xmlrpclib.Server(SUMA_HOST + "/rpc/api", verbose=0)
-key = client.auth.login(SUMA_LOGIN, SUMA_PASSWORD)
+client = xmlrpclib.Server(MLM_HOST + "/rpc/api", verbose=0)
+key = client.auth.login(MLM_LOGIN, MLM_PASSWORD)
 client.system.setDetails(key, 1000012345, {'contact_method' : 'ssh-push-tunnel'})
 ----
 
