--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -64,8 +64,8 @@ Valid values are:
 * `ssh-push-tunnel`
 
 ----
-client = xmlrpclib.Server(SUMA_HOST + "/rpc/api", verbose=0)
-key = client.auth.login(SUMA_LOGIN, SUMA_PASSWORD)
+client = xmlrpclib.Server(MLM_HOST + "/rpc/api", verbose=0)
+key = client.auth.login(MLM_LOGIN, MLM_PASSWORD)
 client.system.setDetails(key, 1000012345, {'contact_method' : 'ssh-push'})
 ----
 
