--- a/modules/common-workflows/pages/workflow-client-onboarding.adoc
+++ b/modules/common-workflows/pages/workflow-client-onboarding.adoc
@@ -51,10 +51,10 @@ hostname -f
 This command will probably return an error, or show something like [literal]``localhost``.
 . Set a new hostname.
   Your new hostname should have a subdomain name and thus include at least two periods.
-  In this example, we are using ``client1.suma.example``
+  In this example, we are using ``client1.MLM.example``
 +
 ----
-hostnamectl set-hostname client1.suma.example
+hostnamectl set-hostname client1.MLM.example
 ----
 . Check that your change was successful:
 +
