--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -135,7 +135,7 @@ To delete the SSH connection data to the instance, use <<proc-deleting-connectio
 * If the instance exists, but is stopped, the last known credentials will be used to try to connect to the instance. 
     How long the credentials remain valid depends on the cloud provider.
 
-* If the instance no longer exists, but is still registered with SUMA, its credentials are no longer valid and the authentication will fail.
+* If the instance no longer exists, but is still registered with MLM, its credentials are no longer valid and the authentication will fail.
     The error message is shown in the column Status. 
 +
 [WARNING]
