--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
@@ -18,7 +18,7 @@ endif::[]
 * An in-place migration from {productname} 4.3 to 5.0 is unsupported because of the change of the underlying operating system from {sles} 15 SP4 to {sle-micro} {microversion}.
 
 * Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
-** For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/mlm/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html.
+** For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html.
 
 * Traditional contact protocol is no longer supported in {productname} 5.0 and later.
 
