--- a/modules/reference/pages/help/api-overview.adoc
+++ b/modules/reference/pages/help/api-overview.adoc
@@ -4,4 +4,4 @@
 The menu:Help[API > Overview] section provides a list of available API calls.
 Click the name of an API call to see the relevant documentation.
 
-For the full API documentation, see https://documentation.suse.com/suma/.
+For the full API documentation, see https://documentation.suse.com/multi-linux-manager/.
