--- a/modules/reference/pages/help/api-sample-scripts.adoc
+++ b/modules/reference/pages/help/api-sample-scripts.adoc
@@ -4,4 +4,4 @@
 The menu:Help:[API > Sample Scripts] section contains example API calls for you to copy.
 The scripts are written in Ruby, Perl, and Python.
 
-See: https://documentation.suse.com/suma/{productnumber}/api/suse-manager/api/scripts.html
+See: https://documentation.suse.com/multi-linux-manager/{productnumber}/api/suse-manager/api/scripts.html
