--- a/modules/reference/pages/help/help-menu.adoc
+++ b/modules/reference/pages/help/help-menu.adoc
@@ -4,7 +4,7 @@
 The [guimenu]``Help`` section opens the current version of the {productname} documentation in a new browser tab.
 This is the documentation installed locally on your {productname} Server.
 
-For all versions and formats of the {productname} documentation, see https://documentation.suse.com/suma/.
+For all versions and formats of the {productname} documentation, see https://documentation.suse.com/multi-linux-manager/.
 
 [NOTE]
 ====
