--- a/modules/retail/pages/retail-admin.adoc
+++ b/modules/retail/pages/retail-admin.adoc
@@ -2,4 +2,4 @@
 = Administration
 
 This sections contains notes on administering your {productname} {smr} installation.
-For general administration tasks, see the {productname} documentation at https://documentation.suse.com/suma/.
+For general administration tasks, see the {productname} documentation at https://documentation.suse.com/multi-linux-manager/.
