--- a/modules/retail/pages/retail-mass-config-yaml.adoc
+++ b/modules/retail/pages/retail-mass-config-yaml.adoc
@@ -14,7 +14,7 @@ branches:
     branch_prefix: branch1      # optional, default guessed from salt id
     server_name: branchserver1  # optional, default guessed from salt id
     server_domain: branch1.cz   # optional, default guessed from salt id
-    nic: eth1                   # nic used for connecting terminals, default taken from hw info in SUMA
+    nic: eth1                   # nic used for connecting terminals, default taken from hw info in MLM
     dedicated_nic: true         # set to true if the terminals are on separate network
     salt_cname: branchserver1.branch1.cz      # hostname of salt master / broker for terminals, mandatory
     configure_firewall: true    # modify firewall configuration
@@ -31,8 +31,8 @@ branches:
     server_name: branchserver2  # optional, default guessed from salt id
     server_domain: branch2.cz   # optional, default guessed from salt id
     salt_cname: branchserver2.branch1.cz      # FQDN of salt master / broker for terminals, mandatory
-    branch_ip: 192.168.2.1      # optional, default taken from SUMA data if the machine is registered
-    netmask: 255.255.255.0      # optional, default taken from SUMA data if the machine is registered
+    branch_ip: 192.168.2.1      # optional, default taken from MLM data if the machine is registered
+    netmask: 255.255.255.0      # optional, default taken from MLM data if the machine is registered
     exclude_formulas:           # optional, do not configure listed formulas
       - dhcp                    # without dedicated NIC the dhcp service is typically provided by a router
     hwAddress: 11:22:33:44:55:66 # optional, required to connect pre-configured entry with particular machine
