--- a/modules/retail/pages/retail-next.adoc
+++ b/modules/retail/pages/retail-next.adoc
@@ -9,7 +9,7 @@ If you need further information or support, try one of these options.
 [[retail.sect.next.docs]]
 == More Documentation
 
-For {productname} documentation, visit https://documentation.suse.com/suma/4.3/.
+For {productname} documentation, visit https://documentation.suse.com//4.3/.
 
 Legacy documentation is available upon request for information purposes only.
 Note, however, that {productname} {smr} documentation supersedes legacy information.
