--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -27,7 +27,7 @@ Prepare third party certificates for both the Hub Server and the Peripheral serv
 .Procedure: Installing the Hub Server
 
 . Install a container host with {sl-micro}.
-  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
+  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm#deploy-mlm-server-micro[].
 
 . On the container host, deploy {productname} as the hub server using the third party certificate.
   Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
@@ -38,7 +38,7 @@ Prepare third party certificates for both the Hub Server and the Peripheral serv
 mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert hub.crt --ssl-server-key hub.key --hubxmlrpc-replicas 1
 ----
 
-For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-mgradm[].
+For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#deploy-mlm-server-mgradm[].
 
 
 
@@ -74,7 +74,7 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.
 .Procedure: Installing the hub server
 
 . Install a container host with {sl-micro}.
-  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
+  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm#deploy-mlm-server-micro[].
 
 . On the container host, deploy {productname} as the hub server.
   Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
@@ -82,11 +82,11 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.
 +
 
 ----
-mgradm install podman suma.example.com --hubxmlrpc-replicas 1
+mgradm install podman MLM.example.com --hubxmlrpc-replicas 1
 ----
 +
 
-For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-mgradm[].
+For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#deploy-mlm-server-mgradm[].
 
 ////
 Next step, peripheral server
