--- a/modules/specialized-guides/pages/large-deployments/hub-namespaces.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-namespaces.adoc
@@ -2,7 +2,7 @@
 = Hub XMLRPC API Namespaces
 
 The Hub XMLRPC API operates in a similar way to the {productname} API.
-For {productname} API documentation, see https://documentation.suse.com/suma.
+For {productname} API documentation, see https://documentation.suse.com/MLM.
 
 The Hub XMLRPC API exposes the same methods that are available from the server's XMLRPC API, with a few differences in parameter and return types.
 Additionally, the Hub XMLRPC API supports some Hub-specific end points which are not available in the {productname} API.
