--- a/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
@@ -19,7 +19,7 @@ Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` comman
 For example:
 
 ----
-mgradm install podman suma.example.com --hubxmlrpc-replicas 1
+mgradm install podman MLM.example.com --hubxmlrpc-replicas 1
 ----
 
 For more information about hub server deployment, see xref:specialized-guides:large-deployments/hub-install.adoc[].
@@ -88,7 +88,7 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 
 
 Deploy the peripheral servers with [command]``mgradm``.
-For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc[].
 
 
 .Procedure:Deploying and Registering Peripheral Servers
