--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-miscellaneous.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-miscellaneous.adoc
@@ -8,7 +8,7 @@
 You can use the following resources to learn more about the {productname} listing and how to deploy.
 
 * link:https://suse.com/c/new-dawn-for-suse-manager/[New dawn for {productname}]
-* link:https://documentation.suse.com/suma/[documentation.suse.com/suma/]
+* link:https://documentation.suse.com/multi-linux-manager/[documentation.suse.com//]
 
 == Where can I find out more about {productname}?
 
