--- a/modules/specialized-guides/pages/public-cloud-guide/overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/overview.adoc
@@ -15,4 +15,4 @@ These procedures have been tested on {awslongform}, {azure}, and {gcplongform}.
 {payglongform} or {byoslongform} services currently work on both {awslongform} and {azure}.
 ====
 
-For more information on using {productname}, see the official {productname} documentation at https://documentation.suse.com/suma.
+For more information on using {productname}, see the official {productname} documentation at https://documentation.suse.com/MLM.
