--- a/modules/specialized-guides/pages/qs-sap/configure.adoc
+++ b/modules/specialized-guides/pages/qs-sap/configure.adoc
@@ -52,7 +52,7 @@ Provide further details for the installation.
 Complete the remaining details according to your environment, click btn:[Save], and apply the highstate.
 When the highstate is complete, you can go on to apply the cluster formula.
 
-image::suma_sap_hana_formula.png[scaledwidth=80%]
+image::mlm_sap_hana_formula.png[scaledwidth=80%]
 
 
 
@@ -63,7 +63,7 @@ In the {productname} {webui}, navigate to menu:Systems[System List] and click th
 Navigate to the [guimenu]``Formulas`` tab, locate the ``Cluster`` heading, and check the ``Habootstrap`` formula in the list.
 Click btn:[Save] and apply the highstate to activate the formula.
 
-image::suma_sap_formulas.png[scaledwidth=80%]
+image::mlm_sap_formulas.png[scaledwidth=80%]
 
 When the formula is activated, navigate to the menu:Formulas[Cluster] tab, and complete the details in the form.
 
@@ -72,4 +72,4 @@ Give your cluster a name, and specify the hostname of the primary client in the 
 
 Complete the remaining details according to your environment, click btn:[Save], and apply the highstate.
 
-image::suma_sap_cluster_formula.png[scaledwidth=80%]
+image::mlm_sap_cluster_formula.png[scaledwidth=80%]
