--- a/modules/specialized-guides/pages/qs-sap/overview.adoc
+++ b/modules/specialized-guides/pages/qs-sap/overview.adoc
@@ -7,4 +7,4 @@ This guide shows you how to use {productname} to install and configure an SAP c
 It guides you through setting up a single {productname} Server, preparing your client systems, and configuring the cluster using formulas.
 
 * For more information about SAP, see the SAP documentation at https://documentation.suse.com/sles-sap.
-* For more information about {productname}, see the {productname} documentation at https://documentation.suse.com/suma.
+* For more information about {productname}, see the {productname} documentation at https://documentation.suse.com/MLM.
