--- a/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
@@ -131,15 +131,15 @@ This is a basic example demonstrating the usage:
   {
     "targets": [ "<client1>:9100", "<client2>:9100" ],
     "labels": {
-      "role": "<suma-client>",
-      "job": "<suma-refclient>"
+      "role": "<MLM-client>",
+      "job": "<MLM-refclient>"
     }
   },
   {
     "targets": [ "<server>:80" ],
     "labels": {
-      "role": "<suma-server>",
-      "job": "<suma-refhost>",
+      "role": "<MLM-server>",
+      "job": "<MLM-refhost>",
       "__metrics_path__": "/rhn/metrics"
     }
   }
