--- a/modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc
@@ -1,4 +1,4 @@
-[[formulas-suma]]
+[[formulas-MLM]]
 = Formulas Provided by {productname}
 
 Some formulas are installed by default with {productname}.
