--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -66,10 +66,10 @@ to
 
 Encrypting pillar secrets can be done anywhere as long as the GPG and the public key generated in <<proc-key-pair-generation>> are available. 
 
-In this example, "SUMA Salt Master" is the GPG key’s UID created earlier.
+In this example, "MLM Salt Master" is the GPG key’s UID created earlier.
 
 ----
-echo 't0ps3cr3t' | gpg --armor --batch --encrypt --recipient "SUMA Salt Master"
+echo 't0ps3cr3t' | gpg --armor --batch --encrypt --recipient "MLM Salt Master"
 ----
 
 
@@ -105,7 +105,7 @@ The client's in-memory cache is only updated on startup or when running executio
 
 [pass]
 ----
-suma-sles15sp1.tf.local:
+MLM-sles15sp1.tf.local:
     ----------
     my-secret:
         t0p s3cr3t!
@@ -118,11 +118,11 @@ To export the GPG key, use the command:
 
 [pass]
 ----
-gpg --export 'SUMA Salt Master' --homedir /etc/salt/gpgkeys --output suma-salt-master.gpg
+gpg --export 'MLM Salt Master' --homedir /etc/salt/gpgkeys --output MLM-salt-master.gpg
 ----
 
-Here 'SUMA Salt Master' is the name used during key generation.
+Here 'MLM Salt Master' is the name used during key generation.
 
-The [literal]```suma-salt-master.gpg``` public key can be freely shared.
+The [literal]```MLM-salt-master.gpg``` public key can be freely shared.
 
 //For more information about GPG, see https://www.gnupg.org/documentation/.
