--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -88,22 +88,22 @@ This is achieved by using port 1233 in the repository URL:
 
 [pass]
 ----
-https://suma-server:1233/repourl...
+https://MLM-server:1233/repourl...
 ----
 
-You can alias the suma-server hostname to [literal]``localhost`` in [path]``/etc/hosts``:
+You can alias the MLM-server hostname to [literal]``localhost`` in [path]``/etc/hosts``:
 ----
-127.0.0.1       localhost    suma-server
+127.0.0.1       localhost    MLM-server
 ----
 
-The server creates a reverse SSH tunnel that connects `localhost:1233` on the client to `suma-server:443`:
+The server creates a reverse SSH tunnel that connects `localhost:1233` on the client to `MLM-server:443`:
 
 [pass]
 ----
-ssh ... -R 1233:suma-server:443
+ssh ... -R 1233:MLM-server:443
 ----
 
-This means that the package manager will actually connect to `localhost:1233`, which is then forwarded to `suma-server:443` by the SSH tunnel.
+This means that the package manager will actually connect to `localhost:1233`, which is then forwarded to `MLM-server:443` by the SSH tunnel.
 
 The package manager can contact the server only if the tunnel is open, which occurs only when the server executes an action on the client.
 
