--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -353,7 +353,7 @@ For more information about the Kiwi build system, see the https://osinside.githu
 === Requirements
 
 The Kiwi image building feature is available for {salt} clients running {sles}{nbsp}12 and {sles}{nbsp}11.
-//SLE15 images support is not yet released for SUMA4, but is part of SUMA4.0.4 as tech preview
+//SLE15 images support is not yet released for MLM4, but is part of MLM4.0.4 as tech preview
 //From {sles}{nbsp}15, ``kiwi-ng`` is used instead of the legacy Kiwi.
 
 Kiwi image configuration files and configuration scripts must be accessible in one of these locations:
