--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -60,7 +60,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
-[[centos-channels-suma-cli]]
+[[centos-channels-MLM-cli]]
 [cols="1,1", options="header"]
 .CentOS Channels - CLI
 |===
@@ -112,7 +112,7 @@ This is due to the way that {centos} manages their repositories.
 
 ifeval::[{mlm-content} == true]
 
-include::snippets/check_sync_webui_suma.adoc[]
+include::snippets/check_sync_webui_mlm.adoc[]
 
 endif::[]
 
