--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -52,7 +52,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
-[[rocky-channels-suma-cli]]
+[[rocky-channels-MLM-cli]]
 [cols="1,1", options="header"]
 .{rocky} Channels - CLI
 |===
@@ -114,7 +114,7 @@ If you do not provide Python 3.6, the installation of the [package]``spacecmd``
 
 ifeval::[{mlm-content} == true]
 
-include::snippets/check_sync_webui_suma.adoc[]
+include::snippets/check_sync_webui_mlm.adoc[]
 
 endif::[]
 
