--- a/modules/client-configuration/pages/vhm-aws.adoc
+++ b/modules/client-configuration/pages/vhm-aws.adoc
@@ -1,7 +1,7 @@
 [[vhm-aws]]
 = Virtual Host Manager and Amazon Web Services
 
-// 2024-04-04 OM: It had been decided in the conversation with the SUMA PO 
+// 2024-04-04 OM: It had been decided in the conversation with the mlm PO 
 // that this Public Cloud related file can stay in the Uyuni books
 
 
