--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-migration-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-migration-mlm.adoc
@@ -18,7 +18,7 @@ An in-place migration from {productname} 4.3 to 5.0 is unsupported because the h
 The traditional contact protocol is no longer supported in {productname} 5.0 and later.
 Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
 
-For more information about migrating to {salt} clients, see https://documentation.suse.com/mlm/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html
+For more information about migrating to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html
 ====
 
 
