--- a/modules/retail/pages/retail-overview.adoc
+++ b/modules/retail/pages/retail-overview.adoc
@@ -17,7 +17,7 @@ It allows administrators to install, configure, and update the software on their
 This guide provides an overview of {productname} {smr}, and its initial installation and setup.
 
 ifeval::[{mlm-content} == true]
-It should be read in conjunction with the {productname} documentation suite, available from https://documentation.suse.com/suma.
+It should be read in conjunction with the {productname} documentation suite, available from https://documentation.suse.com/MLM.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
