--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
@@ -77,7 +77,8 @@ If you want to use a production environment and need background information abou
 [NOTE]
 ====
 [path]``/var/lib/containers/storage/volumes``
-Minimum 150 GB.  Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
+Minimum 150 GB.  
+Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
 ====
 
 
