--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
@@ -23,6 +23,7 @@ Images for {productname} {productnumber} are available at link:https://www.suse.
 
 [NOTE]
 ====
+Remember to resize the default size of the partition before deploying.
 For more information on preparing raw images, see:
 
 * link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
