avoid lonely section

--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -31,6 +31,10 @@ Result: Renaming is successfully propagated
 If you change the hostname of the {productname} Server locally, your {productname} installation ceases to work properly.
 This is because the changes have not been made in the database, which prevents the changes from propagating out your clients and any proxies.
 
+
+
+== Rename Server
+
 If you need to change the hostname of the {productname} Server, you can do so using the [command]``spacewalk-hostname-rename`` script.
 This script updates the settings in the {postgresql} database and the internal structures of {productname}.
 
@@ -74,7 +78,7 @@ mgradm restart
 
 
 
-== Proxy Reconfiguration
+== Reconfigure Proxy
 
 Any proxy must be reconfigured.
 The new server certificate and key must be copied to the proxy.
