--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -88,9 +88,9 @@ For more information, see xref:installation-and-upgrade:install-proxy.adoc[].
 [NOTE]
 ====
 If you use PXE boot through a proxy, you must check the configuration settings of the proxy.
-Only for non-containerized proxies version 4.3, run the [command]``configure-tftpsync.sh`` setup script and enter the requested information.
-In such a case, on the container host, execute:
+If you use PXE boot through Non-containerized {productname} Proxy 4.3 [systemitem]``tftpsync`` needs to be reconfigured.
 
+On the container host, execute:
 ----
 mgrctl exec -ti -- configure-tftpsync.sh
 ----
