raise admonition severity

--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -85,7 +85,7 @@ The new server certificate and key must be copied to the proxy.
 For more information, see xref:installation-and-upgrade:install-proxy.adoc[].
 
 
-[NOTE]
+[IMPORTANT]
 ====
 If you use PXE boot through a proxy, you must check the configuration settings of the proxy.
 If you use PXE boot through Non-containerized {productname} Proxy 4.3 [systemitem]``tftpsync`` needs to be reconfigured.
